02/27/2004  version 0.1.55  Ian Lewis <IanLewis@member.fsf.org>

    * Refactored the tree in the DefaultView to it's own class.
    * Added in some preliminary drag n drop stuff. Commented out
      so it will compile

02/21/2004  version 0.1.54  Ian Lewis <IanLewis@member.fsf.org>

    * DOCTYPE nodes are no longer visible in the tree. Some other method for
      editing doc types will have to be added to jsXe later.

02/16/2004  version 0.1.53  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug introduced in 0.1.51 that caused formatting not to work in
      the source view and when saving.

02/08/2004  version 0.1.52  Ian Lewis <IanLewis@member.fsf.org>

    * Added support for writing the internal part of a DOCTYPE to the XML
      document.

02/07/2004  version 0.1.51  Ian Lewis <IanLewis@member.fsf.org>

    * Cleaned up the DOMSerializer and DOMSerializerConfiguration classes
    * Added a flag to the DefaultXMLDocument class to tell if the DOM is synced
      with the text content in parsed mode. Now it won't sync and thus serialize
      the DOM to the content every time text is requested.

01/23/2004  version 0.1.50  Ian Lewis <IanLewis@member.fsf.org>

    * Added support for soft tabs in the DOMSerializer
    * Fixed a bug with how AdapterNode keeps references to it's children.
    * Added support for discarding default attributes in the DOMSerializer.

12/21/2003  version 0.1.49  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed the icon that is rendered for a tree node when editing. Got some
      weird behaviour out of the JTree when using the previous CellRenderer. I
      created a new one that simply renders Element node icons since they are
      the only editable nodes in the JTree.
    * Updated the DOMSerializerConfiguration class to support all the DOM3 LS
      parameters (even if the DOMSerializer itself doesn't yet).

12/20/2003  version 0.1.48  Ian Lewis <IanLewis@member.fsf.org>
