@@ -1,3 +1,10 @@
+02/29/2004  version 0.1.56  Ian Lewis <IanLewis@member.fsf.org>
+
+    * Added preliminary drag n drop support for the tree in the default view.
+      You can now drag nodes from one parent to another in the tree view. You
+      can also drag a node to any thing that accepts text from a drag n drop
+      operation..
+
 02/27/2004  version 0.1.55  Ian Lewis <IanLewis@member.fsf.org>
 
     * Refactored the tree in the DefaultView to it's own class.
